--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,21 @@
 spring.application.name=luckyBazar
+#local
+#spring.datasource.url=jdbc:mysql://localhost:3306/luckyBazar?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=root
 
-spring.datasource.url=jdbc:mysql://localhost:3306/luckyBazar?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+server.port=9876
+
+#global
+spring.datasource.url=jdbc:mysql://socialshare.quantumparadigm.in:3306/luckydrawn
+spring.datasource.username=luckydrawn
+spring.datasource.password=root@123
+server.ssl.key-store = classpath:static/ssl/keystore.p12
+server.ssl.key-store-password = 12345
+server.ssl.keyStoreType = PKCS12
+server.ssl.keyAlias = luckydraw.planotechevents.com
